@@ -1,0 +1,10 @@
+#
+#  $Id: sla.cmake 2354 2015-11-30 16:36:25Z kjmeagher $
+#  
+#  Copyright (C) 2016 the IceCube Collaboration <http://www.icecube.wisc.edu>
+#  
+
+TOOLDEF (nlopt
+  include nlopt.hpp
+  lib NONE nlopt_cxx
+  )
